<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yourcampusmap.themap.Information"
    android:id="@+id/Information"

    android:background="@drawable/background">

    <TextView android:text="@string/info1"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info1"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp" />

    <TextView
        android:text="@string/info2"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info2"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/info1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/info3"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info3"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/info2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:text="@string/info4"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info4"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/info3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:text="@string/info5"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info5"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/info4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:text="@string/info6"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info6"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/info5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:text="@string/info7"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info7"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/info6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/info8"
        android:autoLink="phone"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info8"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/info7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unr_logo"
        android:src="@drawable/unr_logo"
        android:background="@null"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/info8"
        android:layout_toRightOf="@+id/info7"
        android:layout_toEndOf="@+id/info7"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
